WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
115279
[WK2] WKContextClient doesn't need to be versioned yet
https://bugs.webkit.org/show_bug.cgi?id=115279
Summary
[WK2] WKContextClient doesn't need to be versioned yet
Alexey Proskuryakov
Reported
2013-04-26 14:49:38 PDT
Versioning is for nightlies running against shipping Safari, and the client is brand new.
Attachments
proposed patch
(2.76 KB, patch)
2013-04-26 14:51 PDT
,
Alexey Proskuryakov
andersca
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-04-26 14:51:11 PDT
Created
attachment 199862
[details]
proposed patch
Alexey Proskuryakov
Comment 2
2013-04-26 14:53:41 PDT
Committed <
http://trac.webkit.org/r149212
>.
Yael
Comment 3
2013-04-26 17:58:01 PDT
A build fix for EFL is in
https://bugs.webkit.org/show_bug.cgi?id=115294
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug