        [WK2] WKContextClient doesn't need to be versioned yet         https://bugs.webkit.org/show_bug.cgi?id=115279

Reviewed by Anders Carlsson.

        * Shared/APIClientTraits.cpp:
        * Shared/APIClientTraits.h:
        * UIProcess/API/C/WKContext.h:



Canonical link: https://commits.webkit.org/133708@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149212 268f45cc-cd09-0410-ab3c-d52691b4dbfc